# commboard

./: .prettierignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md  Rocket.toml  TODO.md  board.ts  build.rs  deno.json  flake.nix  import_map.json  main.ts  migrate.py  result  shell.nix
example-boards/: demo-board.json  example.json
example-boards/demo-board/: board.json
src/: api.rs  board.rs  config.rs  main.rs
src/api/: mod.rs  structs.rs
src/board/: card.rs  mod.rs  tag.rs  tests.rs  view.rs
src/data/: board.rs  mod.rs  tests.rs  view.rs
src/state/: boards.rs  card.rs  mod.rs  tag.rs
src/state/board/: arrangement.rs  (+5 more)
ui/: README.md  index.html  main.tsx  node-packages.nix  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
ui-old/: .eslintrc.yml  package-lock.json  package.json
ui-old/public/: index.html
ui-old/src/: Board.tsx  BoardViewCategory.tsx  Card.tsx  CardFull.tsx  TagList.tsx
ui/components/: CardItem.tsx  FileBrowser.tsx  Header.tsx
ui/lib/: colors.ts  files.ts  urls.ts
ui/public/: index.html
ui/src/: ApiTypes.ts  App.js  App.tsx  Board.css  Board.js  Board.tsx  BoardViewCategory.css  BoardViewCategory.js  BoardViewCategory.tsx  BoardViewDefault.js  BoardViewDefault.tsx  Card.css  Card.js  Card.tsx  CardColumn.css  CardColumn.js  CardColumn.tsx  CardFull.css  CardFull.js  CardFull.tsx  MainPanel.js  MarkdownInlineInput.css  MarkdownInlineInput.js  MarkdownInlineInput.tsx  Selector.js  Selector.tsx  Tag.js  TagList.css  TagList.js  TagList.tsx  index.js  useClickOnOutside.js  useKeyPress.js
(+13 files in other folders)
