[package]
name = "commboard"
version = "0.2.0"
authors = ["Andrew Abbott <andrew@mirx.dev>"]
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
clap = { version = "3.1.6", features = ["derive"] }

[build-dependencies]
walkdir = "2.3.2"
