[package]
name = "commboard"
version = "0.3.0"
authors = ["Andrew Abbott <andrew@mirx.dev>"]
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
thiserror = "1.0.37"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
clap = { version = "3.2.22", features = ["derive"] }

[build-dependencies]
walkdir = "2.3.2"
