[package]
name = "commboard"
version = "0.3.0"
authors = ["Andrew Abbott <andrew@mirx.dev>"]
edition = "2021"

[dependencies]
log = "0.4.20"
env_logger = "0.10.1"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rocket = { version = "0.5.0", features = ["json"] }
clap = { version = "4.4.8", features = ["derive"] }
toml = "0.8.8"
xdg = "2.5.2"

[build-dependencies]
walkdir = "2.4.0"
